[gd_scene load_steps=31 format=3 uid="uid://cvpcav8d02psu"]

[ext_resource type="Script" path="res://Scenes/Enemies/mushroom_enemy.gd" id="1_3nnq1"]
[ext_resource type="Texture2D" uid="uid://bykigtfrwj4ho" path="res://Free/Enemies/Mushroom/Idle (32x32).png" id="1_42e8b"]
[ext_resource type="Texture2D" uid="uid://bj3ijmnp8k718" path="res://assets/Enemies/New Piskel.png" id="2_ewkdr"]
[ext_resource type="AudioStream" uid="uid://3mn0xk3morip" path="res://assets/Sounds/Enemy Hurt.wav" id="4_50ast"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d2jho"]
atlas = ExtResource("2_ewkdr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_44mo2"]
atlas = ExtResource("2_ewkdr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iriiw"]
atlas = ExtResource("2_ewkdr")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0m5f"]
atlas = ExtResource("2_ewkdr")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f5nx"]
atlas = ExtResource("2_ewkdr")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3f83"]
atlas = ExtResource("2_ewkdr")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl43s"]
atlas = ExtResource("1_42e8b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18tjn"]
atlas = ExtResource("1_42e8b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk27b"]
atlas = ExtResource("1_42e8b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp6ds"]
atlas = ExtResource("1_42e8b")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_weg4a"]
atlas = ExtResource("1_42e8b")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcq3e"]
atlas = ExtResource("1_42e8b")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7q5s"]
atlas = ExtResource("1_42e8b")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qw7i"]
atlas = ExtResource("1_42e8b")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34lk7"]
atlas = ExtResource("1_42e8b")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiaxv"]
atlas = ExtResource("1_42e8b")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8owq8"]
atlas = ExtResource("1_42e8b")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s38j8"]
atlas = ExtResource("1_42e8b")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r6fm"]
atlas = ExtResource("1_42e8b")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pupq2"]
atlas = ExtResource("1_42e8b")
region = Rect2(416, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7d4i8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2jho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44mo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iriiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0m5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f5nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3f83")
}],
"loop": false,
"name": &"Death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl43s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18tjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk27b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp6ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_weg4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcq3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7q5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qw7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34lk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiaxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8owq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s38j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r6fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pupq2")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0e5jp"]
size = Vector2(67, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h80mf"]
size = Vector2(76, 55)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nolt4"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahkgp"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7pa3n"]
size = Vector2(68, 93)

[node name="MushroomEnemy" type="RigidBody2D" groups=["Enemies"]]
script = ExtResource("1_3nnq1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(20.5, -20.5)
scale = Vector2(2.28125, 2.28125)
sprite_frames = SubResource("SpriteFrames_7d4i8")
animation = &"Death"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(19.5, -7)
shape = SubResource("RectangleShape2D_0e5jp")

[node name="Area2D" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(20, -6.5)
shape = SubResource("RectangleShape2D_h80mf")

[node name="EnemyBar" type="ProgressBar" parent="Area2D"]
unique_name_in_owner = true
offset_left = -8.0
offset_top = -35.0
offset_right = 45.0
offset_bottom = -30.0
theme_override_styles/background = SubResource("StyleBoxFlat_nolt4")
theme_override_styles/fill = SubResource("StyleBoxFlat_ahkgp")
step = 1.0
value = 100.0
show_percentage = false

[node name="PlayerDetectionLeft" type="Area2D" parent="."]
visible = false

[node name="Left" type="CollisionShape2D" parent="PlayerDetectionLeft"]
position = Vector2(-16, -30)
shape = SubResource("RectangleShape2D_7pa3n")

[node name="PlayerDetectionRight" type="Area2D" parent="."]
visible = false

[node name="Right" type="CollisionShape2D" parent="PlayerDetectionRight"]
position = Vector2(52, -30)
shape = SubResource("RectangleShape2D_7pa3n")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_50ast")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="PlayerDetectionLeft" to="." method="_on_player_detection_left_body_entered"]
[connection signal="body_entered" from="PlayerDetectionRight" to="." method="_on_player_detection_right_body_entered"]
